[gd_scene load_steps=15 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://theme/default.tres" type="Theme" id=2]
[ext_resource path="res://gui/window_popup.png" type="Texture" id=3]
[ext_resource path="res://gui/icon/close_highlight.png" type="Texture" id=4]
[ext_resource path="res://gui/icon/close.png" type="Texture" id=5]
[ext_resource path="res://gui/window_icon.png" type="Texture" id=6]
[ext_resource path="res://font/Raleway-Black.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://font/NotoSansMono-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://gui/about_weeber_image.png" type="Texture" id=9]
[ext_resource path="res://font/NotoSans-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 640, 480 )
margin_left = 1.0
margin_right = 1.0
margin_top = 35.0
margin_bottom = 1.0
expand_margin_top = 35.0

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
extra_spacing_bottom = 4
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 8
use_mipmaps = true
use_filter = true
extra_spacing_bottom = 8
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 12
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 10 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Master" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/Master"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="GUI/Master"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBar" type="HBoxContainer" parent="GUI/Master/Container"]
margin_right = 900.0
margin_bottom = 23.0

[node name="FileBtn" type="MenuButton" parent="GUI/Master/Container/MenuBar"]
margin_right = 29.0
margin_bottom = 23.0
rect_min_size = Vector2( 29, 0 )
text = "File"
flat = false
switch_on_hover = true

[node name="HelpBtn" type="MenuButton" parent="GUI/Master/Container/MenuBar"]
margin_left = 29.0
margin_right = 65.0
margin_bottom = 23.0
rect_min_size = Vector2( 36, 0 )
text = "Help"
flat = false
switch_on_hover = true

[node name="MockBtn" type="MenuButton" parent="GUI/Master/Container/MenuBar"]
visible = false
margin_left = 65.0
margin_right = 105.0
margin_bottom = 23.0
rect_min_size = Vector2( 40, 0 )
disabled = true
text = "More"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="HSplitContainer" parent="GUI/Master/Container"]
margin_top = 27.0
margin_right = 900.0
margin_bottom = 600.0
size_flags_vertical = 3
split_offset = 1

[node name="Meta" type="VSplitContainer" parent="GUI/Master/Container/Content"]
margin_right = 201.0
margin_bottom = 573.0
rect_min_size = Vector2( 200, 0 )

[node name="ColorRect" type="ColorRect" parent="GUI/Master/Container/Content/Meta"]
margin_right = 201.0
margin_bottom = 573.0
color = Color( 1, 0.384314, 0.384314, 1 )

[node name="Post" type="VBoxContainer" parent="GUI/Master/Container/Content"]
margin_left = 213.0
margin_right = 900.0
margin_bottom = 573.0
rect_min_size = Vector2( 538, 0 )

[node name="ColorRect" type="ColorRect" parent="GUI/Master/Container/Content/Post"]
margin_right = 687.0
margin_bottom = 548.0
size_flags_vertical = 3
color = Color( 0.329412, 0.639216, 1, 1 )

[node name="PostSize" type="Label" parent="GUI/Master/Container/Content/Post"]
margin_top = 552.0
margin_right = 687.0
margin_bottom = 573.0

[node name="AboutPopup" type="Control" parent="GUI/Master"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weeber" type="WindowDialog" parent="GUI/Master/AboutPopup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -150.0
margin_right = 225.0
margin_bottom = 150.0
rect_min_size = Vector2( 450, 300 )
size_flags_horizontal = 5
custom_constants/close_h_ofs = 46
custom_constants/close_v_ofs = 35
custom_constants/title_height = 35
custom_icons/close_highlight = ExtResource( 4 )
custom_icons/close = ExtResource( 5 )
custom_styles/panel = SubResource( 1 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Override" type="Control" parent="GUI/Master/AboutPopup/Weeber"]
anchor_top = -0.117
anchor_right = 1.0
margin_top = 0.100002
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="HBoxContainer" parent="GUI/Master/AboutPopup/Weeber/Override"]
anchor_right = 0.898
anchor_bottom = 1.0
margin_right = -0.100037
rect_min_size = Vector2( 404, 35 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="GUI/Master/AboutPopup/Weeber/Override/TopBar"]
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="Title" type="Label" parent="GUI/Master/AboutPopup/Weeber/Override/TopBar"]
margin_left = 35.0
margin_top = 7.0
margin_right = 115.0
margin_bottom = 28.0
text = "About Weeber"

[node name="Content" type="VBoxContainer" parent="GUI/Master/AboutPopup/Weeber"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="GUI/Master/AboutPopup/Weeber/Content"]
margin_right = 450.0
margin_bottom = 120.0
rect_min_size = Vector2( 450, 120 )
custom_constants/separation = 8

[node name="Name" type="Label" parent="GUI/Master/AboutPopup/Weeber/Content/Header"]
margin_right = 195.0
margin_bottom = 120.0
rect_min_size = Vector2( 125, 120 )
size_flags_horizontal = 0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0.3125, 0.3125, 0.3125, 1 )
custom_fonts/font = SubResource( 2 )
text = "          Weeber"
align = 1
valign = 2

[node name="Version" type="Label" parent="GUI/Master/AboutPopup/Weeber/Content/Header"]
margin_left = 203.0
margin_right = 228.0
margin_bottom = 120.0
rect_min_size = Vector2( 25, 120 )
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "0.1.0"
align = 1
valign = 2

[node name="Info" type="HBoxContainer" parent="GUI/Master/AboutPopup/Weeber/Content"]
margin_top = 124.0
margin_right = 450.0
margin_bottom = 300.0
size_flags_vertical = 3
alignment = 1

[node name="Image" type="TextureRect" parent="GUI/Master/AboutPopup/Weeber/Content/Info"]
margin_left = 48.0
margin_right = 172.0
margin_bottom = 85.0
rect_min_size = Vector2( 124, 85 )
size_flags_vertical = 0
texture = ExtResource( 9 )
expand = true
stretch_mode = 4

[node name="Text" type="Label" parent="GUI/Master/AboutPopup/Weeber/Content/Info"]
margin_left = 172.0
margin_right = 402.0
margin_bottom = 80.0
rect_min_size = Vector2( 230, 80 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "Weeber is a simple imageboard (booru) downloader created by MumuNiMochii, and with the power of the Godot Engine.

Source/updates are available in              ."
autowrap = true

[node name="GithubLinkBtn" type="LinkButton" parent="GUI/Master/AboutPopup/Weeber"]
anchor_left = 0.782
anchor_top = 0.613
anchor_right = 0.871
anchor_bottom = 0.683
margin_left = 0.0999756
margin_top = 0.0999908
margin_right = 0.0499878
margin_bottom = 0.0999908
shortcut_in_tooltip = false
text = "Github"
__meta__ = {
"_edit_use_anchors_": false
}
